
Table display now uses the background color cyan for all cells containing new lines
  not only in SQL result tables and in Object tree "Content" tables.

Table cell data popup now offers find, Xml/Json-reformatting and export functions for all tables.
  To open the cell data popup double-click a table cell.

Bug fixes:

Fixed possible NullPointerException which could occur in editable combo boxes.
  For example in the file export dialog.

When searching through all open SQL results, the findings were not correctly scrolled to.
  Hint: To open the new search dialog use the menu File --> Find in all results, ctrl shift R,
  or the new main window tool bar button.

https://github.com/squirrel-sql-client/squirrel-sql-code/issues/62
  When executing a script that contains statements with the file export markers @file or
  @msExcelWorkbook these statements where not executed in order but at the beginning of the script.
  Info: For more information on exporting open the "Export ..." dialog using the right mouse menu on
  any table and click "About exporting ..." at the bottom of the dialog.

Changed SQuirreL's main frame icon (arcon.png) from APNG (animated PNG) to a usual PNG file.
  Thanks to Federico Bruni for the fix.

The query
  "SELECT title--comment
  FROM books"
  failed because the comment started at the end of the first line without white spaces.

Updated/corrected the driver dialog description of SQuirreL's help.

https://github.com/squirrel-sql-client/squirrel-sql-code/issues/59
  Cell data popup and cell detail display: Improved readability JSON/XML highlighting
  in light and dark mode.

Loading Syntax- and Auto-Correct-properties raised ClassNotFoundException.
  The problem concerns
  - Menu File --> New Session Properties --> tab Syntax
  - Menu Session --> sub menu Syntax --> "Configure auto correct / abbreviations"
  The problem resulted from moving the Syntax-Plugin into SQuirreL's core
  and occurs in snapshot snapshot-20250302_2058 only.
